# QURAN-STUDENT-PROGRESS-TRACKING-SYSTEM

./: .gitignore  README.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 3cda93e7c477_initial_schema.py  452acfa3204e_add_evaluations_and_observations.py  ccbd632cc0a5_add_notifications_table.py  e7208c7f2769_add_audit_logs_and_progress_history.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  rate_limit.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  audit_log.py  class_.py  evaluation.py  memorization_progress.py  mixins.py  notification.py  observation.py  progress_history.py  school.py  student.py  surah.py  user.py
backend/app/repositories/: analytics_repo.py  audit_log_repo.py  class_repo.py  evaluation_repo.py  notification_repo.py  observation_repo.py  progress_history_repo.py  progress_repo.py  student_repo.py  surah_repo.py  user_repo.py
backend/app/schemas/: admin.py  analytics.py  audit.py  auth.py  class_.py  evaluation.py  import_.py  matrix.py  notification.py  observation.py  progress.py  progress_history.py  (+3 more)
backend/seeds/: seed.py  surahs.json
backend/tests/: conftest.py  test_admin_user_crud.py  test_admin_users.py  test_analytics.py  test_audit_log.py  test_auth.py  test_classes.py  test_evaluations.py  test_import_excel.py  test_matrix.py  test_notifications.py  test_observations.py  test_progress.py  test_progress_timeline.py  test_revision.py  test_students.py  test_tenant_isolation.py
(+76 files in other folders)
